--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "twitter-oauth2-client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Twitter OAuth2.0 Client",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kg0r0/twitter-oauth2-client.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Kento Goro",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/kg0r0/twitter-oauth2-client/issues"
   },
@@ -22,6 +23,13 @@
     "cookie-session": "^1.4.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "openid-client": "^4.9.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
